--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
+    "name": "LAZONEULTA-LAUNCHER",
+    "preductname": "LAZONEULTA Launcher",
     "version": "1.3.0",
-    "description": "Launcher Mincraft custom (crack, premium)",
+    "description": "Launcher Mincraft for LAZONEULTA server",
     "main": "src/app.js",
-    "author": "Luuxis",
+    "author": "SHADOWYT",
     "url": "http://craftdium.ml/launcherSelvania",
     "engines": {
         "node": "^18.x.x"
@@ -34,6 +34,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/korthiadev/lazoneultra.git"
     }
 }
